# UnnecessaryEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  leaktest.sh  something.dot  stuff.md
applications/dummy/: CMakeLists.txt  dummy.cpp  gameplay.cpp  gameplay.h  operations.cpp  operations.h
applications/orbital/: CMakeLists.txt  orbital.cpp
applications/triangle/: CMakeLists.txt  draw_triangle_pass.cpp  draw_triangle_pass.h  triangle.cpp
engine/: CMakeLists.txt
engine/include/unnecessary/: application.h  def.h  logging.h  platform.h  render_target.h  renderer.h  strings.h  version.h  world.h
engine/include/unnecessary/algorithm/: dependency_graph.h  event.h  geometry.h  layout.h  requirements.h  tree.h  vk_utility.h  vulkan_requirements.h
engine/include/unnecessary/algorithm/graphs/: adjacency_list.h  graph.h
engine/include/unnecessary/common/: layout.h
engine/include/unnecessary/components/: common.h  dummy.h
engine/include/unnecessary/graphics/: buffer.h  descriptor_allocator.h  descriptor_layout.h  descriptor_set.h  disposable.h  dispose_tracker.h  drawable.h  frame_graph.h  framebuffer.h  graphics_pipeline.h  image.h  image_view.h  lighting.h  material.h  matrices.h  mesh.h  model.h  pipeline_spec.h  queue.h  render_group.h  renderer.h  rendering_device.h  shader.h  shader_stage.h  swapchain.h  vertex_layout.h  vertices.h
engine/include/unnecessary/graphics/buffers/: buffer.h  buffer_writer.h  command_buffer.h  command_buffer_graph.h
engine/include/unnecessary/graphics/descriptors/: descriptor_allocator.h  descriptor_layout.h  descriptor_set.h  descriptor_writer.h
engine/include/unnecessary/graphics/pipeline/: graphics_pipeline.h  graphics_pipeline_layout.h
engine/include/unnecessary/graphics/rendering/: attachment.h  baked_frame_graph.h  batch.h  frame_graph.h  frame_resource.h  phong_rendering_pipeline.h  rendering_pipeline.h  renderpass.h
engine/include/unnecessary/graphics/shading/: render_graph.h  shader.h  shader_stage.h
engine/include/unnecessary/graphics/systems/: drawing.h  projection.h  rendering.h
engine/include/unnecessary/jobs/: job_chain.h  jobs.h  load_file_job.h  loading_jobs.h  parallel_for_job.h
engine/include/unnecessary/misc/: aggregator.h  benchmark.h  binary_writer.h  membuf.h  types.h
engine/include/unnecessary/systems/: cameras.h  graphics_systems.h  group.h  lighting.cpp  lighting.h  parallel_system_data.h  rendering.h  run_system_job.h  simulation.h  system.h  transform.h  velocity.h  world.h
engine/resources/models/: teapot_normal.fbx
engine/resources/scenes/: dummy.json
engine/resources/schemas/: entity.schema.json  scene.schema.json  shader.schema.json  uniform.schema.json
engine/resources/shaders/: common.glsl  common.hlsl  standart.frag  standart.frag.hlsl  standart.geom.hlsl  standart.shader  standart.vert  standart.vert.hlsl
engine/resources/shaders/glsl/: common.glsl  emit_normals.geom.glsl  phong.frag.glsl  phong.vert.glsl  standart.frag.glsl  standart.geom.glsl  standart.vert.glsl  utils.glsl
engine/resources/shaders/glsl/phong/: phong.shader.json
engine/resources/shaders/hlsl/: phong.vert.hlsl  standart.frag.hlsl  standart.geom.hlsl  standart.vert.hlsl  utils.hlsl
engine/src/unnecessary/: application.cpp  def.cpp  dummy.cpp  logging.cpp  platform.cpp  renderer.cpp  version.cpp  world.cpp
engine/src/unnecessary/algorithm/: requirements.cpp  vk_utility.cpp  vulkan_requirements.cpp
engine/src/unnecessary/graphics/: buffer.cpp  descriptor_allocator.cpp  descriptor_layout.cpp  dispose_tracker.cpp  frame_graph.cpp  framebuffer.cpp  graphics_pipeline.cpp  graphics_pipeline_spec.cpp  image.cpp  image_view.cpp  material.cpp  mesh.cpp  model.cpp  queue.cpp  render_graph.cpp  rendering_device.cpp  rendering_pipeline.cpp  shader.cpp  shader_stage.cpp  swapchain.cpp  vertex_layout.cpp
engine/src/unnecessary/graphics/buffers/: buffer.cpp  buffer_writer.cpp  command_buffer.cpp  command_buffer_graph.cpp
engine/src/unnecessary/graphics/descriptors/: descriptor_allocator.cpp  descriptor_layout.cpp  descriptor_set.cpp  descriptor_writer.cpp
engine/src/unnecessary/graphics/pipeline/: graphics_pipeline.cpp  graphics_pipeline_layout.cpp  vertex_input.cpp
engine/src/unnecessary/graphics/rendering/: attachment.cpp  baked_frame_graph.cpp  frame_resource.cpp  phong_rendering_pipeline.cpp  renderpass.cpp
engine/src/unnecessary/graphics/shading/: shader.cpp  shader_stage.cpp
engine/src/unnecessary/jobs/: job_chain.cpp  job_system.cpp  jobs.cpp  load_file_job.cpp  loading_jobs.cpp  parallel_for_job.cpp
engine/src/unnecessary/misc/: benchmark.cpp  binary_writer.cpp  membuf.cpp  types.cpp
engine/src/unnecessary/systems/: cameras.cpp  graphics_systems.cpp  lighting.cpp  parallel_system_data.cpp  run_system_job.cpp  simulation.cpp  system.cpp  transform.cpp  velocity.cpp
module/jobs/: CMakeLists.txt  execution_0.csv  execution_1.csv  execution_10.csv  execution_11.csv  execution_2.csv  execution_3.csv  execution_4.csv  execution_5.csv  execution_6.csv  execution_7.csv  execution_8.csv  execution_9.csv
module/jobs/scripts/: build_timeline.py  execution_0.csv.timeline.html  recording.csv.timeline.html  sdf_generator.csv.timeline.html
module/jobs/scripts/templates/: timeline.html.j2
module/jobs/tests/: dynamic_job_tests.cpp  job_dependencies_tests.cpp
module/rendering/: CMakeLists.txt
module/rendering/pipelines/basic/: CMakeLists.txt
module/rendering/pipelines/phong/: CMakeLists.txt
module/rendering/resources/shaders/: common.glsl  triangle.frag.glsl  triangle.shader.json  triangle.vert.glsl  utils.glsl
module/rendering/serialization/: CMakeLists.txt
module/rendering/tools/: unnecessary_shader_preprocessor.cpp
module/serialization/: CMakeLists.txt
module/serialization/nlohmann/: CMakeLists.txt
module/serialization/nlohmann/tests/: bson_tests.cpp  json_tests.cpp
module/serialization/tests/: serialization_tests.cpp
module/source_analysis/: CMakeLists.txt  dummy.h
module/source_analysis/tests/: dummy_2.h  multithread_parsing.cpp  sample.h
(+530 files in other folders)
